--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@ html, body{
 body{
   background: #030321;
   font-family: Arial;
+  
+background: url(/background.jpg) no-repeat center center fixed; 
+-webkit-background-size: cover; 
+-moz-background-size: cover; 
+-o-background-size: cover; 
+background-size: cover;
 }
 
 svg {
