--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,15 @@ body{
   background: #030321;
   font-family: Arial;
   
-background: url(/background.jpg) no-repeat center center fixed; 
+background: url(../img/background.jpg) no-repeat center center fixed; 
 -webkit-background-size: cover; 
 -moz-background-size: cover; 
 -o-background-size: cover; 
 background-size: cover;
+}
+
+.row {
+    margin-top: 3%;
 }
 
 svg {
